--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "optparse": "1.0.3",
     "githubot": ">=0.1.5",
     "underscore": ">= 1.3.1",
-    "underscore.string": ">= 0.0.1"
+    "underscore.string": ">= 0.0.1",
+    "soupselect": ">= 0.2.0",
+    "htmlparser": ">= 0.1.0",
+    "jsdom": ">= 0.1.0"
   }
 }
 
